user-apps/miscellaneous/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  labels:
    app: memos
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      priorityClassName: application-critical
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - image: neosmemo/memos:0.31.0
        name: memos
        ports:
        - containerPort: 5230
          name: memos-pod
        livenessProbe:
          httpGet:
            path: /
            port: memos-pod
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: memos-pod
          initialDelaySeconds: 15
          periodSeconds: 30
        resources:
          requests:
            memory: 32Mi
          limits:
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
