user-apps/miscellaneous/memos/service.yaml
# Docs: https://usememos.com/docs/deploy/kubernetes#avoid-the-memos_port-collision
apiVersion: v1
kind: Service
metadata:
  name: memos-svc   # Service Name can't be "memos"  
spec:
  selector:
    app: memos
  ports:
    - name: http
      port: 5230
      targetPort: 5230
