user-apps/miscellaneous/memos/http-route-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos-external
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
  hostnames:
    - "notes.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: memos-svc
          port: 5230
    # # gRPC traffic
    # - matches:
    #     - path:
    #         type: RegularExpression
    #         value: "/grpc.*"          #for any GRPC help methods
    #   backendRefs:
    #     - group: ""
    #       kind: Service
    #       name: memos-svc
    #       port: 10001
    #       weight: 1
    # - matches:
    #     - path:
    #         type: RegularExpression
    #         value: "/memos.api.v1.*"  #for GRPC methods used by the usememos.
    #   backendRefs:
    #     - group: ""
    #       kind: Service
    #       name: memos-svc
    #       port: 10001
    #       weight: 1
    # # Web UI / REST API
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: "/"
    #   backendRefs:
    #     - group: ""
    #       kind: Service
    #       name: memos-svc
    #       port: 10002
    #       weight: 1
