user-apps/miscellaneous/memos/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Miscellaneous
    gethomepage.dev/name: Memos
    gethomepage.dev/icon: https://raw.githubusercontent.com/usememos/memos/refs/heads/main/web/public/logo.webp
    gethomepage.dev/href: https://notes.tamhomelab.com
    gethomepage.dev/description: Notes
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "notes.tamhomelab.com"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/"
    backendRefs:
      - name: memos-svc
        port: 5230
